log/build_2025-04-03_06-55-05/py_pubsub/stderr.log
  File "/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishtemp.py", line 37
    msg.data = (self.tempSensor.get_temperature())L
                                                  ^
SyntaxError: invalid syntax

